--- a/css/main.scss
+++ b/css/main.scss
@@ -11,11 +11,11 @@ $white: 			#ffffff;
 $light-grey: 		#E9E9E9;
 $grey: 				#7D7D7D;
 
-$red: 				#EE0058;
-$yellow:			#FFDE00;
-$blue:				#00CBFF;
+$red: 				#960332;
+$yellow:			#6b6001;
+$blue:				#035c82;
 $orange:			#ED462F;
-$purple:			#C036F3;
+$purple:			#531e5e;
 
 $breakpoint-small: 	700px;
 $breakpoint-medium: 1170px;
